# contacts-etl-phase21

./: .envrc  .gitignore  CONTEXT.md  DESIGN_NOTES.md  Makefile  README.md  config.yaml  pyproject.toml  tmp_casey.vcf
scripts/: confidence_insights.ipynb  invalid_email_insights.ipynb  non_standard_phone_insights.ipynb  referral_insights.ipynb
src/contacts_etl/: combine_contacts.py  common.py  confidence_report.py  config_loader.py  logging_utils.py  merge.py  models.py  normalization.py  tag_contacts.py  tagging.py  validate_quality.py
src/contacts_etl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_combine_helpers.py
