# toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contacts-etl"
version = "0.1.0"
description = "Contact list consolidation, normalization, and validation pipeline."
readme = { file = "README.md", "content-type" = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "You", email = "you@example.org" }]
keywords = ["contacts", "etl", "normalization", "dedupe", "validation"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas>=2.2,<2.4",
    "python-dateutil>=2.8.2",
    "pyyaml>=6.0.1",
]

[project.urls]
"Homepage" = "https://example.org/projects/contacts-etl"
"Repository" = "https://github.com/yourorg/contacts-etl"
"Bug Tracker" = "https://github.com/yourorg/contacts-etl/issues"
"Documentation" = "https://yourorg.github.io/contacts-etl/"

[project.optional-dependencies]
validation = [
    "email-validator>=2.1.0",
    "phonenumberslite>=8.13.0",
    "usaddress>=0.5.10",
    "dnspython>=2.3.0"
]
dedupe = [
    "recordlinkage>=0.16",
    "numpy>=1.26"
]
tests = [
    "pytest>=7.0,<9"
]
dev = [
    "pandas-stubs>=2.2,<2.4",
    "pytest>=7.0,<9",
    "pytest-cov>=4.0",
    "mypy>=1.9",
    "flake8>=7.1.0,<8",
    "flake8-pyproject>=1.2.3",
    "black>=24.0", # optional formatting tool
    "isort>=5"            # optional import sorter
]

[project.scripts]
contacts-tag = "contacts_etl.tag_contacts:main"
contacts-confidence = "contacts_etl.confidence_report:main"
contacts-consolidate = "contacts_etl.combine_contacts:main"
contacts-validate = "contacts_etl.validate_quality:main"

# Pytest config for `pytest` when run in this project
[tool.pytest.ini_options]
minversion = "7.0"
# include coverage by default for local runs; CI can override
addopts = "-q --color=yes --cov=contacts_etl --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"

# Coverage configuration (used by pytest-cov)
[tool.coverage.run]
branch = true
source = ["contacts_etl"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

# Mypy config (basic)
[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Flake8 config (basic)
[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

# Optional formatting / import sorting defaults
[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["contacts_etl"]
